# HFSS-Optimizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  __init__.py  gui.py  gui_pyqt6.py  launch_gui.py  pyproject.toml  requirements.txt  run.py  run_dual_line.py  setup_env.py  start.bat  user_config.json  user_config.json.backup  启动优化程序.bat  环境配置.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
algorithms/: __init__.py  base.py  mobo.py  mopso.py  nsga2.py  robust_optimizer.py  surrogate.py
config/: __init__.py  default_config.py  surrogate_config.py
core/: __init__.py  config_validator.py  constrained_params.py  evaluator.py  hfss_controller.py  shared_memory.py  surrogate.py  surrogate_hotswap.py  trainer_process.py
docs/: algorithms.md  configuration.md  dual_line_usage_guide.md  getting-started.md  mopso_dual_line_integration.md  troubleshooting.md
gui/: dual_line_monitor.py
tests/: checker.py  test_dual_line.py  test_imports.py  test_message_api.py  test_s_params.py  test_validate.py
tools/: result_viewer.py  run_viewer.bat
utils/: __init__.py  constraint.py  formula.py  visualization.py
