[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hfss-optimizer"
version = "2026.4.11"
description = "A powerful HFSS antenna optimization tool integrating multiple optimization algorithms and surrogate models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Patisight", email = "1643816608@qq.com"}
]
keywords = ["hfss", "antenna", "optimization", "mopso", "nsga2", "bayesian", "surrogate-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.2.0",
    "scikit-optimize>=0.9.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "PyQt6>=6.4.0",
    "pyaedt>=0.7.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
surrogate = [
    "gpflow>=2.6.0",
    "tensorflow>=2.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
